# TestAI

./: .gitignore  AGENTS.md  CLAUDE.md  DESCRIPTION  NAMESPACE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
R/: functions_did.R  functions_noncompliance.R  functions_rdhonest.R  functions_rdrobust.R  hello.R  imports.R
docs/conversation/: did_multiperiod_analysis_conversation_transcript.md  ground_truth_comparison_conversation_transcript.md  mdp_simulator_estimator_conversation_transcript.md  mdp_solver_conversation_transcript.md  randomization_inference_conversation_transcript.md  simulator_estimator_conversation_transcript.md
docs/note/: causal_inference.md  causal_inference_en.md  mdp_simulator_estimator.md  mdp_simulator_estimator_en.md  mdp_solver.md  mdp_solver_en.md
docs/slide/: use_ai_as_ra.md
ghpages/: index.html  randomization_fisher_pvalue.html
output/difference_in_differences_multiperiods/: df_design_nocov.rds
output/estimate_mdp/: estimation_results.json
output/randomization_fisher_pvalue/: data_realized.rds
output/simulate_mdp/: config.json  simulation_config.json  simulation_results.npz
output/solve_mdp/: config.json  convergence_history.npz  policy_data.npz  v_theta_0.pt  v_theta_1.pt
output/sovle_mdp/: config.json  convergence_history.npz  policy_data.npz  v_theta_0.pt  v_theta_1.pt
problems/: README.md  problem_set_1.md
problems/config_opm/: config_opm.qmd
problems/estimate_opm/: estimate_opm.html  estimate_opm.qmd
scripts/: run_mdp.sh
test/: __init__.py
(+62 files in other folders)
